beginnings of approach page

--- a/approach.html
+++ b/approach.html
@@ -1,8 +1,8 @@
 ---
-layout: page
+layout: default
 permalink: /approach.html
 ref: approach
 locale: de
 ---
 
- {% include pages/approach.html %}
+{% include pages/approach.html %}
