--- a/en/approach.html
+++ b/en/approach.html
@@ -1,8 +1,8 @@
 ---
-layout: page
+layout: default
 permalink: /en/approach.html
 ref: approach
 locale: en
 ---
 
- {% include pages/approach.html %}
+{% include pages/approach.html %}
