--- a/services.html
+++ b/services.html
@@ -1,9 +1,8 @@
 ---
-layout: page
+layout: default
 permalink: /services.html
 ref: services
 locale: de
 ---
 
  {% include pages/services.html %}
- 
