--- a/en/services.html
+++ b/en/services.html
@@ -1,9 +1,8 @@
 ---
-layout: page
+layout: default
 permalink: /en/services.html
 ref: services
 locale: en
 ---
 
  {% include pages/services.html %}
- 
