add meta titles and descriptions to main pages

--- a/about.html
+++ b/about.html
@@ -3,6 +3,9 @@ layout: default
 permalink: /about.html
 ref: about
 locale: de
+lang: de
+title: Über uns
+description: D-LABS wurde 2006 auf Initiative von Hasso Plattner gegründet.
 ---
 
  {% include pages/about.html %}
