--- a/approach.html
+++ b/approach.html
@@ -3,6 +3,9 @@ layout: default
 permalink: /approach.html
 ref: approach
 locale: de
+lang: de
+title: Arbeitsweise
+description: Wir arbeiten nach den Ansätzen und Methoden des Design Thinkingund Human-centred Design.
 ---
 
 {% include pages/approach.html %}
