--- a/en/about.html
+++ b/en/about.html
@@ -3,6 +3,9 @@ layout: default
 permalink: /en/about.html
 ref: about
 locale: en
+lang: en-US
+title: About us
+description: D-LABS was founded in 2006 on the initiative of Hasso Plattner.
 ---
 
  {% include pages/about.html %}
