--- a/en/approach.html
+++ b/en/approach.html
@@ -3,6 +3,9 @@ layout: default
 permalink: /en/approach.html
 ref: approach
 locale: en
+lang: en-US
+title: Approach
+description: Our working method is based on the approaches and methods of design thinking and human-centred design.
 ---
 
 {% include pages/approach.html %}
