--- a/en/index.html
+++ b/en/index.html
@@ -2,5 +2,7 @@
 layout: home
 ref: home
 locale: en
+lang: en-US
+description: We are a consulting and design company that designs, optimizes and implements user-centric digital products and services.
 ---
  {% include pages/home.html %}
