--- a/en/jobs.html
+++ b/en/jobs.html
@@ -3,6 +3,9 @@ layout: default
 permalink: /en/jobs.html
 ref: jobs
 locale: en
+lang: en-US
+title: Jobs
+description: Would you like to join our creative, interdisciplinary team?
 ---
 
  {% include pages/jobs.html %}
