--- a/en/services.html
+++ b/en/services.html
@@ -3,6 +3,9 @@ layout: default
 permalink: /en/services.html
 ref: services
 locale: en
+lang: en-US
+title: Services
+description: ✓ User Research ✓ Digital Experience Design ✓ Software Engineering ✓ Enabling & Coaching
 ---
 
  {% include pages/services.html %}
