--- a/index.html
+++ b/index.html
@@ -2,5 +2,7 @@
 layout: home
 ref: home
 locale: de
+lang: de
+description: Wir sind ein Beratungs- und Designunternehmen, welches nutzerzentriert digitale Produkte und Services konzipiert, optimiert und implementiert.
 ---
  {% include pages/home.html %}
