--- a/jobs.html
+++ b/jobs.html
@@ -3,6 +3,9 @@ layout: default
 permalink: /jobs.html
 ref: jobs
 locale: de
+lang: de
+title: Jobs
+description: Du möchtest dich in unser kreatives, interdisziplinäres Team einbringen?
 ---
 
  {% include pages/jobs.html %}
