--- a/services.html
+++ b/services.html
@@ -3,6 +3,9 @@ layout: default
 permalink: /services.html
 ref: services
 locale: de
+lang: de
+title: Leistungen
+description: ✓ User Research ✓ Digital Experience Design ✓ Software Engineering ✓ Enabling & Coaching
 ---
 
  {% include pages/services.html %}
