add blog meta description

--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,7 @@ ref: blog
 locale: de
 lang: de
 title: Blog
+description: Aktuelles über Methoden, D-LABS-Events und aus unseren Projekten.
 ---
 
  {% include pages/blog.html %}
