--- a/en/blog.html
+++ b/en/blog.html
@@ -5,6 +5,7 @@ ref: blog
 locale: en
 lang: en-US
 title: Blog
+description: News about methods, D-LABS events and our projects.
 ---
 
  {% include pages/blog.html %}
