include 'D-LABS' in meta descriptions

--- a/en/approach.html
+++ b/en/approach.html
@@ -5,7 +5,7 @@ ref: approach
 locale: en
 lang: en-US
 title: Approach
-description: Our working method is based on the approaches and methods of design thinking and human-centred design.
+description: The D-LABS working method is based on the approaches and methods of design thinking and human-centred design.
 ---
 
 {% include pages/approach.html %}
