--- a/en/jobs.html
+++ b/en/jobs.html
@@ -5,7 +5,7 @@ ref: jobs
 locale: en
 lang: en-US
 title: Jobs
-description: Would you like to join our creative, interdisciplinary team?
+description: Would you like to join our creative, interdisciplinary D-LABS team?
 ---
 
  {% include pages/jobs.html %}
