--- a/en/services.html
+++ b/en/services.html
@@ -5,7 +5,7 @@ ref: services
 locale: en
 lang: en-US
 title: Services
-description: ✓ User Research ✓ Digital Experience Design ✓ Software Engineering ✓ Enabling & Coaching
+description: D-LABS offers ✓ User Research ✓ Digital Experience Design ✓ Software Engineering ✓ Enabling & Coaching
 ---
 
  {% include pages/services.html %}
