--- a/jobs.html
+++ b/jobs.html
@@ -5,7 +5,7 @@ ref: jobs
 locale: de
 lang: de
 title: Jobs
-description: Du möchtest dich in unser kreatives, interdisziplinäres Team einbringen?
+description: Du möchtest dich in unser kreatives, interdisziplinäres D-LABS-Team einbringen?
 ---
 
  {% include pages/jobs.html %}
