--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@ ref: services
 locale: de
 lang: de
 title: Leistungen
-description: ✓ User Research ✓ Digital Experience Design ✓ Software Engineering ✓ Enabling & Coaching
+description: D-LABS bietet ✓ User Research ✓ Digital Experience Design ✓ Software Engineering ✓ Enabling & Coaching
 ---
 
  {% include pages/services.html %}
