--- a/approach.html
+++ b/approach.html
@@ -5,7 +5,7 @@ ref: approach
 locale: de
 lang: de
 title: Arbeitsweise
-description: D-LABS arbeitet nach den Ansätzen und Methoden des Design Thinking und Human-centred Design.
+description: D-LABS arbeitet nach den Ansätzen und Methoden des Design Thinking und Human-Centered Design.
 ---
 
 {% include pages/approach.html %}
